--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
-    "name": "pediff",
-    "version": "2.4.1",
-    "description": "Perceptual difference testing tool",
-    "main": "index.js",
-    "preferGlobal": true,
-    "bin": {
-        "pediff": "index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Schibsted-Tech-Polska/stp.pediff.git"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Schibsted Tech Polska Sp. z o.o.",
-    "license": "ISC",
-    "dependencies": {
-        "async": "^1.4.2",
-        "custom-logger": "git://github.com/noodny/custom-logger.git",
-        "get-port": "^1.0.0",
-        "gulp-sequence": "^0.4.0",
-        "lodash": "^3.10.1",
-        "meow": "^3.3.0",
-        "node-static": "^0.7.6",
-        "png-crop": "0.0.0",
-        "png-differ": "git://github.com/noodny/png-diff.git",
-        "png-jpg": "0.0.2",
-        "recursive-copy": "^1.0.10",
-        "rmdir-recursive": "0.0.1",
-        "socket.io": "^1.3.5",
-        "spooky": "git://github.com/noodny/SpookyJS.git"
-    },
-    "devDependencies": {
-        "browser-sync": "^2.9.3",
-        "gulp": "^3.9.0",
-        "gulp-jshint": "^1.11.2",
-        "gulp-livereload": "^3.8.0",
-        "gulp-load-plugins": "^1.0.0-rc.1",
-        "gulp-plumber": "^1.0.1",
-        "gulp-rename": "^1.2.2",
-        "gulp-requirejs-optimize": "^0.3.0",
-        "gulp-sass": "^2.0.4",
-        "gulp-sourcemaps": "^1.5.2",
-        "jshint-stylish": "^2.0.1"
-    }
+  "name": "pediff",
+  "version": "2.4.1",
+  "description": "Perceptual difference testing tool",
+  "main": "index.js",
+  "preferGlobal": true,
+  "bin": {
+    "pediff": "index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Schibsted-Tech-Polska/stp.pediff.git"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js run all"
+  },
+  "author": "Schibsted Tech Polska Sp. z o.o.",
+  "license": "ISC",
+  "dependencies": {
+    "async": "^1.4.2",
+    "custom-logger": "git://github.com/noodny/custom-logger.git",
+    "get-port": "^1.0.0",
+    "gulp-sequence": "^0.4.0",
+    "lodash": "^3.10.1",
+    "meow": "^3.3.0",
+    "node-static": "^0.7.6",
+    "png-crop": "0.0.0",
+    "png-differ": "git://github.com/noodny/png-diff.git",
+    "png-jpg": "0.0.2",
+    "recursive-copy": "^1.0.10",
+    "rimraf": "^2.5.0",
+    "rmdir-recursive": "0.0.1",
+    "socket.io": "^1.3.5",
+    "spooky": "git://github.com/noodny/SpookyJS.git"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.9.3",
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-livereload": "^3.8.0",
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-requirejs-optimize": "^0.3.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.5.2",
+    "jshint-stylish": "^2.0.1"
+  }
 }
